--- a/package.json
+++ b/package.json
@@ -27,12 +27,18 @@
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.17",
     "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tensorflow-models/coco-ssd": "^2.2.3",
+    "@tensorflow/tfjs": "^4.18.0",
+    "@uidotdev/usehooks": "^2.4.1",
     "@vercel/analytics": "^1.2.2",
+    "firebase": "^10.12.0",
     "next": "^13.3.1",
     "next-themes": "^0.2.1",
     "react": "^18",
+    "react-cookie": "^7.1.4",
     "react-dom": "^18",
-    "react-hook-form": "^7.43.9"
+    "react-hook-form": "^7.43.9",
+    "react-webcam": "^7.2.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
