--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "react-cookie": "^7.1.4",
     "react-dom": "^18",
     "react-hook-form": "^7.43.9",
-    "react-webcam": "^7.2.0"
+    "react-webcam": "^7.2.0",
+    "swiper": "^11.1.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
