--- a/package.json
+++ b/package.json
@@ -34,9 +34,11 @@
     "firebase": "^10.12.0",
     "next": "^13.3.1",
     "next-themes": "^0.2.1",
+    "prop-types": "^15.8.1",
     "react": "^18",
     "react-cookie": "^7.1.4",
     "react-dom": "^18",
+    "react-google-multi-lang": "^1.0.6",
     "react-hook-form": "^7.43.9",
     "react-webcam": "^7.2.0",
     "swiper": "^11.1.4"
