--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "@uidotdev/usehooks": "^2.4.1",
     "@vercel/analytics": "^1.2.2",
     "firebase": "^10.12.0",
+    "flowbite": "^2.4.1",
+    "flowbite-react": "^0.10.1",
     "next": "^13.3.1",
     "next-themes": "^0.2.1",
     "prop-types": "^15.8.1",
