--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@tensorflow/tfjs": "^4.18.0",
     "@uidotdev/usehooks": "^2.4.1",
     "@vercel/analytics": "^1.2.2",
+    "aos": "^3.0.0-beta.6",
     "firebase": "^10.12.0",
     "flowbite": "^2.4.1",
     "flowbite-react": "^0.10.1",
