--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "firebase": "^10.12.0",
     "flowbite": "^2.4.1",
     "flowbite-react": "^0.10.1",
+    "lucide-react": "^0.460.0",
     "next": "^13.3.1",
     "next-themes": "^0.2.1",
     "prop-types": "^15.8.1",
